1979/01/18	V2.2A Revised DECUS version.
1979/11/15	V2.3A Bug fixes.
1980/02/28	V2.4A Compressed text file.
1980/07/18	V2.5A Transportable data base file.

Fortran
───────
1987/02/11	V2.6A Converted to f77/Unix.
1987/09/14	V2.6B Converted to f77/Unix for pdps and Vaxen.

ANSI C (C1991)
──────────────
1991/03/11	V2.7A Converted to C (based on V2.6B).

C99 (C2021)
───────────
2021/09/27	V2.8 Converted to C99 (based on V2.6A).

C99 (C2021) Translation & Upgrades
──────────────────────────────────
2021/09/14	The raw translation of the Fortran source into C, using f2c (version 20190311).
		Common Blocks are translated incorrectly and #include's are inserted in-line.
		All of that has to be fixed and undone.
		The file ‟Translate.log” contains some of the details provided by the translator.
2021/09/14	A first Makefile has been added.
		This assumes that the f2c library and the include file ‟f2c.h” have been installed
		The file ‟Compile.log” contains some of the details provided by the first run of ‟make”.
2021/09/14	The undefined function itime() has been resolved with a ‟fallback” function ITime().
2021/09/14	The ‟f2c.h” file has been internalized as ‟F2C.h”.
		Additional normalization has been done on the source code layout.
2021/09/14	Most of ‟F2C.h” has been nativized to C and eliminated.
2021/09/14	Move the declarations of ‟built-in” functions (defined in the f2c library) to "F2C.h".
		Further information on the f2c library and utility may be found in https://www.netlib.org/f2c/f2c.pdf.
2021/09/15	Collating the definitions of the common blocks into ‟common.c”.
2021/09/15	Eliminated the duplicate common block definitions from ‟common.c”.
		Compilation is now possible, but no baseline has yet been established.
		Hidden size-dependencies for data I/O exist, which crash the file I/O.
2021/09/15	Added the data/configuration files d{indx,text}.dat as symbolic links (for now).
2021/09/15	Normalized the layout of the comments.
2021/09/15	Strength reduction: