@@ -24,7 +24,7 @@ C     & 2RAT,0,3,2RTO,0,4,2RIN,0,5,3RINS,3RIDE,5,3RINT,1RO,5,
 C     & 3RDOW,1RN,6,2RUP,0,7,3RUND,2RER,8,2ROF,0,9,2RON,0,10,
 C     & 3ROFF,0,11/
 	DATA PVOC/24885,28800,1,37180,12800,2,34369,22680,2,
-     & 32338,24847,2,2400,0,3,32600,0,4,14960,0,5,
+     & 32338,24847,2,2400,0,3,32600,0,4,14960,24000,5,
      & 14979,14565,5,14980,0,5,7023,22400,6,34240,0,7,
      & 34164,8720,8,24240,0,9,24560,0,10,24246,0,11/
 C
@@ -128,7 +128,7 @@ C     & 3REAT,2RME,138,3RORA,3RNGE,139,3RECC,1RH,141,
      & 30601,37418,90,32054,0,91,30721,29440,92,
      & 37163,17818,98,5295,32320,100,
      & 3921,14565,101,
-     & 11261,7400,108,31101,2325,109,127,5281,4000,109,
+     & 11261,7400,108,31101,2325,109,127,5281,40000,109,
      & 30729,23400,110,32329,22400,110,
      & 11925,8560,115,143,26458,26085,116,
      & 37129,32200,117,147,160,
@@ -492,7 +492,7 @@ C     & 3RBAG,0,1,25,100,3RSAC,1RK,1,3RGAR,3RLIC,2,
 C     & 3RCLO,2RVE,2,3RFOO,1RD,3,3RSAN,3RDWI,3,3RLUN,2RCH,3,
 C     & 3RDIN,3RNER,3,
 C     & 3RGUN,1RK,4,55,3RPIE,2RCE,4,143,186,3RSLA,1RG,4,3RCOA,1RL,5,
-C     & 3RPIL,1RE,5,38,78,87,88,122,3RHEA,1RP,5,
+C     & 3RPIL,1RE,5,18,38,78,87,88,122,3RHEA,1RP,5,
 C     & 3RFIG,3RURI,6,
 C     & 3RMAC,3RHIN,7,3RPDP,2R10,7,3RPDP,2R11,7,3RDRY,2RER,7,
 C     & 3RLID,0,7,3RDIA,3RMON,8,3RCAS,1RE,9,123,3RBOT,3RTLE,10,121,
@@ -509,7 +509,7 @@ C     & 3RAXE,0,20,3RDIN,3RNER,3,
      & 5295,35400,2,10215,6400,3,30454,7329,3,20054,5120,3,
      & 6774,22618,3,
      & 12054,17600,4,55,25965,5000,4,143,186,30881,11200,4,5401,19200,5,
-     & 25972,8000,5,38,78,87,88,122,13001,25600,5,
+     & 25972,8000,5,18,38,78,87,88,122,13001,25600,5,
      & 9967,34329,6,
      & 20843,13174,7,25776,50800,7,25776,50840,7,7145,8720,7,
      & 19564,0,7,6761,21414,8,4859,8000,9,123,3820,32485,10,121,
@@ -580,7 +580,7 @@ C     & 3RBAG,3RMAN,61,3RSTI,3RLLE,62,
      & 11802,19420,59,25649,23209,60,149,2340,0,60,149,
      & 4854,35259,60,25963,32858,60,37418,17600,60,
      & 20859,32218,60,215,32329,8240,61,29402,3418,61,
-     & 5529,21175,61,3254,6780,61,5535,24440,61,11414,32000,61,
+     & 5529,21174,61,3254,6780,61,5535,24440,61,11414,32000,61,
      & 11414,32485,61,20854,0,61,32341,11200,61,
      & 3247,20854,61,31209,19685,62,
 C Formerly: OVOC4
