@@ -7,4 +7,4 @@ C Was: INTEGER AVOC(450) split/equivalenced into COMMON BLOCK /ADJVOC/
 C Was: INTEGER VVOC(950) split/equivalenced into COMMON BLOCK /VRBVOC/
 	COMMON /VRBVOC/ VVOC(935)
 C Was: INTEGER OVOC(1050) split/equivalenced into COMMON BLOCK /OBJVOC/
-	COMMON /OBJVOC/ OVOC(1021)
+	COMMON /OBJVOC/ OVOC(1022)
